# qt_calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  resources.qrc
include/: AboutPopup.h  Configuration.h  ExpEvalScope.h  ExpressionBuilder.h  Formatting.h  MainWindow.h  MainWindowUtils.h  Segment.h  SegmentType.h
src/: AboutPopup.cpp  Configuration.cpp  ExpEvalScope.cpp  ExpressionBuilder.cpp  Formatting.cpp  MainWindow.cpp  MainWindowUtils.cpp  Segment.cpp  main.cpp
ui/: about_popup.ui  calculator_form.ui
